cfn-templates/enterprise-app-vpc.template
AWSTemplateFormatVersion: 2010-09-09

Description: >-
  Creates a standalone application vpc and deploys a sample web application
  with reverse proxy, ELBs, RDS, and other resources required for application
  development, testing, and deployment.

Metadata:
  Stack:
    Value: 3
  VersionDate:
    Value: 20180726
  Identifier:
    Value: template-application
  Input:
    Description: >-
      All your input are belong to me.
  Output:
    Description: Outputs ID of all deployed resources
  'AWS::CloudFormation::Interface':
    ParameterGroups:
      - Label:
          default: Region Config
        Parameters:
          - pEC2KeyPair
          - pAvailabilityZone1
          - pAvailabilityZone2
          - pDeploymentType
      - Label:
          default: Network (new VPC config)
        Parameters:
          - pVPCCidrRange
          - pPublicSubnetCidrRange1
          - pPublicSubnetCidrRange2
          - pPrivateSubnetCidrRange1
          - pPrivateSubnetCidrRange2

Parameters:

  pBastionKeyPair:
    Description: Name of EC2 key pair used to log into Bastion instances.
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
    Default: 'bssimpk-dev'

  pAvailabilityZone1:
    Description: 'Availability Zone #1'
    Type: 'AWS::EC2::AvailabilityZone::Name'
    Default: 'us-east-1a'

  pAvailabilityZone2:
    Description: 'Availability Zone #2'
    Type: 'AWS::EC2::AvailabilityZone::Name'
    Default: 'us-east-1b'

  pVPCCidrRange:
    Description: 'CIDR Block Range for the application VPC'
    Type: String
    Default: '10.200.0.0/16'

  pPublicSubnetCidrRange1:
    Description: 'CIDR Block Range for Public Subnet 1'
    Type: String
    Default: '10.200.100.0/24'

  pPublicSubnetCidrRange2:
    Description: 'CIDR Block Range for Public Subnet 2'
    Type: String
    Default: '10.200.102.0/24'

  pPrivateSubnetCidrRange1:
    Description: 'CIDR Block Range for Private Subnet 1'
    Type: String
    Default: '10.200.200.0/24'

  pPrivateSubnetCidrRange2:
    Description: CIDR Block Range for Private Subnet 2
    Type: String
    Default: '10.200.202.0/24'

  pDeploymentType:
    Description: Deployment Type
    Type: String
    Default: 'DEVELOPMENT'
    AllowedValues:
      - 'DEVELOPMENT'
      - 'TEST'
      - 'PRODUCTION'

  pBastionInstanceType:
    Description: Bastion Host EC2 instance type
    Type: String
    Default: t2.small
    AllowedValues:
      - t2.small
      - t2.medium
      - t2.large
    ConstraintDescription: Must be a valid EC2 instance type.


##############################################################################
#
#  Mappings
#
#######################################################################

Mappings:

  mMapInstanceTypeToArch:
    t2.small:  { Arch: HVM64 }
    t2.medium: { Arch: HVM64 }
    t2.large:  { Arch: HVM64 }

  mMapRegionArchToAmazonLinux1AMI:
    us-east-1:
      HVM64: ami-cfe4b2b0


##############################################################################
#
#  Resources
#
#######################################################################

Resources:

  #
  # Region - VPC and Subnets
  #

  rVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: { Ref: pVPCCidrRange }
      Tags:
        - Key: Name
          Value: { Ref: 'AWS::StackName' }

  rPublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: { Ref: pAvailabilityZone1 }
      CidrBlock: { Ref: pPublicSubnetCidrRange1 }
      MapPublicIpOnLaunch: true
      VpcId: { Ref: rVPC }
      Tags:
        - Key: Name
          Value: { Ref: 'AWS::StackName' }

  rPublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: { Ref: pAvailabilityZone2 }
      CidrBlock: { Ref: pPublicSubnetCidrRange2 }
      MapPublicIpOnLaunch: true
      VpcId: { Ref: rVPC }
      Tags:
        - Key: Name
          Value: { Ref: 'AWS::StackName' }

  rPrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: { Ref: pAvailabilityZone1 }
      CidrBlock: { Ref: pPrivateSubnetCidrRange1 }
      MapPublicIpOnLaunch: false
      VpcId: { Ref: rVPC }
      Tags:
        - Key: Name
          Value: { Ref: 'AWS::StackName' }

  rPrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: { Ref: pAvailabilityZone2 }
      CidrBlock: { Ref: pPrivateSubnetCidrRange2 }
      MapPublicIpOnLaunch: false
      VpcId: { Ref: rVPC }
      Tags:
        - Key: Name
          Value: { Ref: 'AWS::StackName' }

  #
  # Network - Gateways and Routes
  #

  rInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: { Ref: 'AWS::StackName' }

  rInternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: { Ref: rInternetGateway }
      VpcId: { Ref: rVPC }

  rPublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: { Ref: rVPC }
      Tags:
        - Key: Name
          Value: { Ref: 'AWS::StackName' }

  rPublicRouteToInternetGateway:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: { Ref: rInternetGateway }
      RouteTableId: { Ref: rPublicRouteTable }

  rPublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref rPublicSubnet1
      RouteTableId: !Ref rPublicRouteTable

  rPublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref rPublicSubnet2
      RouteTableId: !Ref rPublicRouteTable

  rNatGatewayElasticIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
    DependsOn: rVPC

  rNatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt 'rNatGatewayElasticIP.AllocationId'
      SubnetId: { Ref: rPrivateSubnet1 }
      Tags:
        - Key: Name
          Value: { Ref: 'AWS::StackName' }

  rPrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: { Ref: rVPC }
      Tags:
        - Key: Name
          Value: { Ref: 'AWS::StackName' }

  rPrivateRouteToNatGateway:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: { Ref: rNatGateway }
      RouteTableId: { Ref: rPrivateRouteTable }

  rPrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref rPrivateSubnet1
      RouteTableId: !Ref rPrivateRouteTable

  rPrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref rPrivateSubnet2
      RouteTableId: !Ref rPrivateRouteTable

  #
  # Network - Security Groups
  #

  rPublicWebSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: 'Security group for incoming public web traffic'
      VpcId: !Ref rVPC
      SecurityGroupIngress:
        - Description: 'Allows HTTPS traffic from all IPs'
          IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          FromPort: 443
          ToPort: 443
      Tags:
        - Key: Name
          Value: { Ref: 'AWS::StackName' }

  rPublicBastionSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: 'Security group for incoming public bastion traffic'
      VpcId: !Ref rVPC
      SecurityGroupIngress:
        - Description: 'Allows SSH traffic from all IPs'
          IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          FromPort: 22
          ToPort: 22
      Tags:
        - Key: Name
          Value: { Ref: 'AWS::StackName' }

  #
  # EC2 - Bastion Hosts
  #

  rPublicBastion1:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref pBastionInstanceType
      SecurityGroupIds:
        - !Ref rPublicBastionSecurityGroup
      KeyName: !Ref pBastionKeyPair
      SubnetId: !Ref rPublicSubnet1
      ImageId:
        Fn::FindInMap:
        - mMapRegionArchToAmazonLinux1AMI
        - Ref: AWS::Region
        - Fn::FindInMap:
          - mMapInstanceTypeToArch
          - Ref: pBastionInstanceType
          - Arch
      Tags:
        - Key: Name
          Value: !Join
            - '-'
            - - 'public-bastion'
              - !Ref 'AWS::StackName'
              - !GetAtt 'rPublicSubnet1.AvailabilityZone'

  rPublicBastion2:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref pBastionInstanceType
      SecurityGroupIds:
        - !Ref rPublicBastionSecurityGroup
      KeyName: !Ref pBastionKeyPair
      SubnetId: !Ref rPublicSubnet2
      ImageId:
        Fn::FindInMap:
        - mMapRegionArchToAmazonLinux1AMI
        - Ref: AWS::Region
        - Fn::FindInMap:
          - mMapInstanceTypeToArch
          - Ref: pBastionInstanceType
          - Arch
      Tags:
        - Key: Name
          Value: !Join
            - '-'
            - - 'public-bastion'
              - !Ref 'AWS::StackName'
              - !GetAtt 'rPublicSubnet2.AvailabilityZone'

  #
  # EC2 - Public ELB For the Reverse Proxy
  #

  rPublicReverseProxyELB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Join ['-', ['public-rp', !Ref 'AWS::StackName']]
      Scheme: internet-facing
      Subnets: [!Ref rPublicSubnet1, !Ref rPublicSubnet2]
      SecurityGroups: [!Ref rPublicWebSecurityGroup]

  rPublicDummyTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 6
      HealthCheckPath: /dummy-healthcheck-that-will-fail.html
      HealthCheckProtocol: HTTPS
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      Name: !Join ['-', [!Ref 'AWS::StackName', 'drop-1']]
      Port: 443
      Protocol: HTTPS
      UnhealthyThresholdCount: 2
      VpcId: !Ref rVPC

  #
  # IAM - ECS IAM Policy
  #

  # This is an IAM role which authorizes ECS to manage resources on your
  # account on your behalf, such as updating your load balancer with the
  # details of where your containers are, so that traffic can reach your
  # containers.
  rFargateResourceManagementRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
        - Effect: Allow
          Principal:
            Service: [ecs.amazonaws.com]
          Action: ['sts:AssumeRole']
      Policies:
      - PolicyName: FargateResourceManagementPolicy
        PolicyDocument:
          Statement:
          - Effect: Allow
            Action:
              # Rules which allow ECS to attach network interfaces to instances
              # on your behalf in order for awsvpc networking mode to work right
              - 'ec2:AttachNetworkInterface'
              - 'ec2:CreateNetworkInterface'
              - 'ec2:CreateNetworkInterfacePermission'
              - 'ec2:DeleteNetworkInterface'
              - 'ec2:DeleteNetworkInterfacePermission'
              - 'ec2:Describe*'
              - 'ec2:DetachNetworkInterface'

              # Rules which allow ECS to update load balancers on your behalf
              # with the information sabout how to send traffic to your containers
              - 'elasticloadbalancing:DeregisterInstancesFromLoadBalancer'
              - 'elasticloadbalancing:DeregisterTargets'
              - 'elasticloadbalancing:Describe*'
              - 'elasticloadbalancing:RegisterInstancesWithLoadBalancer'
              - 'elasticloadbalancing:RegisterTargets'
            Resource: '*'

  #
  # ECS - Reverse Proxy Cluster
  #

  rFargateReverseProxyCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: !Join ['-', [!Ref 'AWS::StackName', 'reverse-proxy-cluster']]


  # This is a role which is used by the ECS tasks themselves.
  rFargateTaskExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
        - Effect: Allow
          Principal:
            Service: [ecs-tasks.amazonaws.com]
          Action: ['sts:AssumeRole']
      Path: /
      Policies:
        - PolicyName: FargateTaskExecutionPolicy
          PolicyDocument:
            Statement:
            - Effect: Allow
              Action:
                # Allow the ECS Tasks to download images from ECR
                - 'ecr:GetAuthorizationToken'
                - 'ecr:BatchCheckLayerAvailability'
                - 'ecr:GetDownloadUrlForLayer'
                - 'ecr:BatchGetImage'

                # Allow the ECS tasks to upload logs to CloudWatch
                - 'logs:CreateLogStream'
                - 'logs:PutLogEvents'
              Resource: '*'
